[tool.poetry]
name = "pytorch-lightning-examples"
version = "0.1.0"
description = ""
authors = ["mokarakaya <mokarakaya@gmail.com>"]

[tool.poetry.dependencies]
python = "==3.9.9"
lightning = "==2.0.1"
pandas = "==1.5.3"
fastapi= "==0.88.0"
tensorboard = "==2.12.1"

[tool.poetry.dev-dependencies]
pytest = "==5.2"
isort = "==5.12.0"
black = "==22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
